# native_minilzo

./: .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_minilzo_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: native_minilzo.podspec
ios/Classes/: native_minilzo.c
ios/Classes/include/: native_minilzo.h
lib/: native_minilzo.dart  native_minilzo_bindings_generated.dart
src/: CMakeLists.txt  native_minilzo.c
